# meta_expert

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  chainlit.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  agent_base.py  agent_registry.py  agent_workpad.py  offline_rag_websearch_agent.py  serper_dev_agent.py  serper_dev_shopping_agent.py  tavily_search_agent.py  web_scraper_agent.py
models/: llms.py
prompt_engineering/: guided_json_lib.py  meta_expert_requirements_prompt.md  meta_prompt.md
tools/: advanced_scraper.py  basic_scraper.py  google_serper.py  llm_graph_transformer.py  offline_graph_rag_tool.py  tavily_search_tool.py
utils/: logging.py  message_handling.py  read_markdown.py
workflow_builders/: meta_agent.py
